--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
     id 'io.spring.dependency-management' version '1.0.7.RELEASE'
 }
 
-group = 'com.andband'
+group = 'com.andband.cloud'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '1.8'
 
