--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 eureka.client.fetch-registry=false
 eureka.client.register-with-eureka=false
 eureka.client.service-url.defaultZone=http://localhost:${server.port}/eureka/
+
+eureka.server.enableSelfPreservation=false
